...
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
...
  "amapNoOrder": "No order",
  "amapNoProduct": "No product",
  "amapNoSelectedDelivery": "No delivery selected",
  "amapNotEnoughMoney": "Not enough money",
  "amapNotPlannedDelivery": "No scheduled delivery",
  "amapOneOrder": "order",
  "amapOpenDelivery": "Open",
  "amapOpened": "Opened",
  "amapOpenningDelivery": "Open delivery?",
  "amapOrder": "Order",
  "amapOrders": "Orders",
  "amapPickChooseCategory": "Please enter a value or choose an existing category",
  "amapPickDeliveryMoment": "Choose a delivery time",
...
  "purchasesProducts": "Products",
  "purchasesPurchases": "Purchases",
  "purchasesPurchasesError": "Error loading purchases",
  "purchasesResearch": "Search",
  "purchasesScan": "Scan",
  "purchasesTag": "Tag",
  "purchasesTickets": "Tickets",
  "purchasesTicketsError": "Error loading tickets",
  "purchasesTimes": "times",
  "purchasesValidate": "Validate",
  "raffleAccounts": "Accounts",
  "raffleActualPrize": "Current prizes",
  "raffleActualRaffles": "Current raffles",
  "raffleAdd": "Add",
  "raffleAddedTicket": "Ticket added",
  "raffleAddingError": "Error during addition",
  "raffleAddPackTicket": "Add ticket pack",
  "raffleAddPrize": "Add",
  "raffleAddTypeTicketSimple": "Add",
  "raffleAlreadyExistTicket": "Ticket already exists",
  "raffleAmount": "Balance",
  "raffleBoughtTicket": "Ticket purchased",
  "raffleBuyThisTicket": "Buy this ticket",
  "raffleClose": "Close",
  "raffleCloseRaffle": "Close raffle",
  "raffleCloseRaffleDescription": "You are going to close the raffle, users will no longer be able to buy tickets. Are you sure you want to continue?",
  "raffleCreateMenu": "Creation menu",
  "raffleCreateYourRaffle": "Your raffle creation menu",
  "raffleDeletedPrize": "Prize deleted",
...
  "raffleDrawingError": "Error during drawing",
  "raffleDrawn": "Drawn",
  "raffleEdit": "Edit",
  "raffleEditedTicket": "Ticket edited",
  "raffleEditingError": "Error during editing",
  "raffleEditPrize": "Edit",
  "raffleEditRaffle": "Edit raffle",
  "raffleEditTypeTicketSimple": "Edit",
  "raffleError": "Error",
  "raffleFillField": "Field cannot be empty",
  "raffleGathered": "Collected",
  "raffleInformation": "Information and statistics",
  "raffleInvalidPrice": "Price must be greater than 0",
...
  "raffleNotEnoughMoney": "You don't have enough money",
  "raffleNoTicket": "You have no ticket",
  "raffleNoTicketBuyable": "You cannot buy tickets right now",
  "raffleNoWinningTicketYet": "Winning tickets will be displayed here",
  "raffleNumberExpected": "An integer is expected",
  "raffleOpen": "Open",
  "raffleOpenRaffle": "Open raffle",
  "raffleOpenRaffleDescription": "You are going to open the raffle, users will be able to buy tickets. You will no longer be able to modify the raffle. Are you sure you want to continue?",
  "rafflePastRaffles": "Past raffles",
  "rafflePossiblePrice": "Possible prize",
  "rafflePrice": "Price",
  "rafflePrize": "Prize",
  "rafflePrizes": "Prizes",
...
  "raffleRaffle": "Raffle",
  "raffleSeeRaffleDetail": "View prizes/tickets",
  "raffleTakeTickets": "Take your tickets",
  "raffleTicket": "ticket",
  "raffleTicketNumber": "Number of tickets",
  "raffleTickets": "Tickets",
  "raffleUnavailableRaffle": "Unavailable raffle",
  "raffleUpdatedAmount": "Amount updated",
  "raffleUpdatingError": "Error during update",
  "raffleWaiting": "Loading",
  "raffleWinnable": "winnable",
  "raffleWinner": "Winner",
  "raffleWinningTickets": "Winning tickets",
...
