...
                          child: child,
                        ),
                        onTap: () async {
                          if (b < packTicket.price) {
                            displayToastWithContext(
                              TypeMsg.error,
                              "Vous n'avez pas assez d'argent",
                            );
                          } else {
                            final boughtTicketMsg = AppLocalizations.of(
                              context,
                            )!.raffleBoughtTicket;
                            final boughtTicketErrorMsg = AppLocalizations.of(
...
