...
  "raffleCloseRaffle": "Fermer la tombola",
  "raffleCloseRaffleDescription": "Vous allez fermer la tombola, les utilisateurs ne pourront plus acheter de tickets. Êtes-vous sûr de vouloir continuer ?",
  "raffleCreateMenu": "Menu de Création",
  "raffleCreateYourRaffle": "Votre menu de création de tombolas",
  "raffleDeletedPrize": "Lot supprimé",
  "raffleDeletedTicket": "Ticket supprimé",
  "raffleDeletePrize": "Supprimer le lot",
  "raffleDeletePrizeDescription": "Vous allez supprimer le lot, êtes-vous sûr de vouloir continuer ?",
  "raffleDeleteTicket": "Supprimer le ticket",
  "raffleDeleteTicketDescription": "Vous allez supprimer le ticket, êtes-vous sûr de vouloir continuer ?",
  "raffleDeletingError": "Erreur lors de la suppression",
  "raffleDescription": "Description",
  "raffleDraw": "Tirer",
  "raffleDrawing": "Tirage",
  "raffleDrawingDescription": "Tirer le gagnant du lot ?",
  "raffleDrawingError": "Erreur lors du tirage",
  "raffleDrawn": "Tiré",
  "raffleEdit": "Modifier",
  "raffleEditedTicket": "Ticket modifié",
  "raffleEditingError": "Erreur lors de la modification",
  "raffleEditPrize": "Modifier",
  "raffleEditRaffle": "Modifier la tombola",
  "raffleEditTypeTicketSimple": "Modifier",
...
  "raffleOpenRaffle": "Ouvrir la tombola",
  "raffleOpenRaffleDescription": "Vous allez ouvrir la tombola, les utilisateurs pourront acheter des tickets. Vous ne pourrez plus modifier la tombola. Êtes-vous sûr de vouloir continuer ?",
  "rafflePastRaffles": "Tombola passés",
  "rafflePossiblePrice": "Prix possible",
  "rafflePrice": "Prix",
  "rafflePrize": "Lot",
  "rafflePrizes": "Lots",
  "raffleQuantity": "Quantité",
  "raffleRaffle": "Tombola",
  "raffleSeeRaffleDetail": "Voir lots/tickets",
  "raffleTakeTickets": "Prendre vos tickets",
  "raffleTicket": "ticket",
  "raffleTicketNumber": "Nombre de ticket",
...
