...
                                  onDelete: () async {
                                    await showDialog(
                                      context: context,
                                      builder: (context) => CustomDialogBox(
                                        title: "Supprimer le lot",
                                        descriptions:
                                            "Voulez-vous vraiment supprimer ce lot?",
                                        onYes: () async {
                                          final deletePriceMsg =
                                              AppLocalizations.of(
                                                context,
                                              )!.raffleDeletePrize;
                                          final deletingErrorMsg =
...
